# HotelBookingCancellation

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
conf/base/: catalog.yml  credentials.yml  globals.yml  mlflow.yml
conf/base/parameters/: data_engineering.yml  data_science.yml  scoring.yml
docker/mlflow/: Dockerfile
src/: requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
src/hotelbookingcancellation/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/hotelbookingcancellation/pipelines/: __init__.py
src/hotelbookingcancellation/pipelines/data_engineering/: nodes.py  pipeline.py
src/hotelbookingcancellation/pipelines/data_science/: nodes.py  pipeline.py
src/hotelbookingcancellation/pipelines/scoring/: README.md  __init__.py  mlflow_model_loader_dataset.py  nodes.py  pipeline.py
src/tests/: __init__.py  conftest.py  test_metadata.py
src/tests/pipelines/: __init__.py
src/tests/pipelines/data_engineering/: __init__.py  test_pipeline.py
src/tests/pipelines/data_science/: __init__.py  test_pipeline.py
src/tests/pipelines/scoring/: __init__.py  test_mlflow_model_loader_dataset.py  test_pipeline.py
